SOLR-14663 - Fix for CVE-2020-13957 unauthenticated configset